syntax = "proto3";

package greetclientstream;

option go_package = "greetclientstreampb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest { Greeting greeting = 1; }

message GreetResponse { string result = 1; }

service GreetService {
  // Client Streaming
  rpc GreetClientStream(stream GreetRequest) returns (GreetResponse);
}